<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.filagunas.contacto.MainActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/titulo"/>

    <LinearLayout
        android:layout_marginTop="@dimen/marge_superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@color/colorAccent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:hint="@string/tnombre"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:id="@+id/editText1"/>


                </android.support.design.widget.TextInputLayout>




        </LinearLayout>


    <LinearLayout
        android:layout_marginTop="@dimen/marge_superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorAccent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="@string/tfecha"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:id="@+id/editText2"/>
            />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="220dp">



            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:datePickerMode="calendar"
                android:id="@+id/datePicker" />




    </ScrollView>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorAccent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/ttelefono"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/editText3"/>

       </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText

                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorAccent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="@string/temail"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:id="@+id/editText4"/>
            />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@color/colorAccent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:hint="@string/tdescripcion"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/editText5"/>
                />

            </android.support.design.widget.TextInputLayout>






    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:textStyle="bold"
            android:textSize="40dp"
           android:theme="@style/BtnSig"
            />

        </LinearLayout>



</LinearLayout>
